hw2: Update Makefile

--- a/hw2-apriori-algorithm/Makefile
+++ b/hw2-apriori-algorithm/Makefile
@@ -1,7 +1,7 @@
 all: 1
 
 main.exe: apriori.o main.o
-	gcc -o main apriori.o main.o -lstdc++ -std=c++11 -O3
+	g++ -o main apriori.o main.o -lstdc++ -std=c++11 -O3
 
 apriori.o: apriori.cpp apriori.h
 	g++ -c apriori.cpp -std=c++11 -O3
@@ -9,8 +9,8 @@ apriori.o: apriori.cpp apriori.h
 main.o: main.cpp
 	g++ -c main.cpp -std=c++11 -O3
 
-main: main.cpp
-	g++ main.cpp -o main -std=c++11 -O3
+main: apriori.o main.o
+	g++ -o main apriori.o main.o -lstdc++ -std=c++11 -O3
 
 0: main.exe
 	main.exe small.data small-out.txt 2
