--- a/.travis.yml
+++ b/.travis.yml
@@ -20,21 +20,21 @@ compiler:
 
 jobs:
   include:
-    name: "small"
+    - name: "small"
     - script: make 0
-    name: "T15I7N0.5KD1K"
+    - name: "T15I7N0.5KD1K"
     - script: make 1
-    name: "T15I7N0.5KD10K"
+    - name: "T15I7N0.5KD10K"
     - script: make 2
-    name: "T15I7N0.5KD100K"
+    - name: "T15I7N0.5KD100K"
     - script: make 3
-    name: "T15I7N0.5KD1000K"
+    - name: "T15I7N0.5KD1000K"
     - script: make 4
-    name: "T10I10N0.1KD1K"
+    - name: "T10I10N0.1KD1K"
     - script: make 5
-    name: "T20I15N1KD10K"
+    - name: "T20I15N1KD10K"
     - script: make 6
-    name: "T12I30N0.5KD100K"
+    - name: "T12I30N0.5KD100K"
     - script: make 7
-    name: "T18I20N2KD5000K"
+    - name: "T18I20N2KD5000K"
     - script: make 8
